# RL-Probe

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  run_multi_gpu.py
configs/: config.yaml  config_multi_gpu.yaml
data/filtered/: dpo_responses.json  dpo_results.json  filtered_problems.json  match_problem_analysis.json  rlvr_responses.json  rlvr_results.json
docs/: KL散度计算方法说明.md  results_analysis_report.md  使用说明和调试指南.md
experiments/: baseline_comparison.py
outputs/checkpoint_evaluations_100_1000/: all_checkpoint_results.json  checkpoint_evaluation_report_100_1000.md  rlvr_step_1000_responses.json  rlvr_step_1000_results.json  rlvr_step_100_responses.json  rlvr_step_100_results.json  rlvr_step_200_responses.json  rlvr_step_200_results.json  rlvr_step_300_responses.json  rlvr_step_300_results.json  rlvr_step_400_responses.json  rlvr_step_400_results.json  rlvr_step_500_responses.json  rlvr_step_500_results.json  rlvr_step_600_responses.json  rlvr_step_600_results.json  rlvr_step_700_responses.json  rlvr_step_700_results.json  rlvr_step_800_responses.json  rlvr_step_800_results.json  rlvr_step_900_responses.json  rlvr_step_900_results.json
outputs/figures/: analysis_report.md
rollouts/rlvr_step_500/: all_rollouts.json
scripts/: 01_prepare_data.py  02_generate_rollouts.py  03_compute_kl.py  04_visualize.py  06_evaluate_checkpoints_100_1000.py  match_problem.py  run_full_pipeline.sh
src/: __init__.py
src/analysis/: __init__.py  entropy.py  kl_divergence.py  spike_detector.py  token_classifier.py
src/data/: __init__.py  dataset.py  filter.py  preprocessor.py
src/models/: __init__.py  model_loader.py  rollout_generator.py
src/visualization/: __init__.py  aggregate.py  case_study.py  heatmap.py  lineplot.py
